    would display the wrong name.

- postgresql
  - Fixed the psycopg2 dialect to use its
    set_isolation_level() method instead of relying
    upon the base "SET SESSION ISOLATION" command,
    as psycopg2 resets the isolation level on each new 
    transaction otherwise.
    
- mssql
  - Fixed "default schema" query to work with
    pymssql backend.

- oracle
  - Added ROWID type to the Oracle dialect, for those
    cases where an explicit CAST might be needed.
    [ticket:1879]

  - Oracle reflection of indexes has been tuned so
    that indexes which include some or all primary
    key columns, but not the same set of columns
    as that of the primary key, are reflected.
    Indexes which contain the identical columns
    as that of the primary key are skipped within
    reflection, as the index in that case is assumed
    to be the auto-generated primary key index.
    Previously, any index with PK columns present
    would be skipped.  Thanks to Kent Bower
    for the patch.  [ticket:1867]

  - Oracle now reflects the names of primary key
    constraints - also thanks to Kent Bower.
    [ticket:1868]
    
- examples
  - The beaker_caching example has been reorgnized
    such that the Session, cache manager, 
    declarative_base are part of environment, and
    custom cache code is portable and now within
    "caching_query.py".  This allows the example to 
    be easier to "drop in" to existing projects.

  - the history_meta versioning recipe sets "unique=False"
    when copying columns, so that the versioning 
    table handles multiple rows with repeating values.
    [ticket:1887]
    
0.6.3
=====
- orm
  - Removed errant many-to-many load in unitofwork 
    which triggered unnecessarily on expired/unloaded 
    collections. This load now takes place only if 
    passive_updates is False and the parent primary 
    key has changed, or if passive_deletes is False 
    and a delete of the parent has occurred.
    [ticket:1845]
